--- a/site/css/theme.css
+++ b/site/css/theme.css
@@ -1,3 +1,6 @@
+body{
+	background: #F4F4F4;
+}
 .main-backgroung-image{
 	width: 100%;
 	transition: all 0.15s ease-in;
@@ -31,6 +34,14 @@
 .button p{
 	margin: 0;
 }
-.login-block *{
-	margin-top: 1.5%;
+.welcome-form{
+	background: rgba(10 ,10 ,10 , 0.4);
+	border-radius: 24px;
+	border: 1px solid rgba(10 ,10 ,10 , 0.4);
+}
+.header{
+	background: #6E84D6;
+}
+.header div p{
+	color: #e7e5ff
 }
