--- a/src/main/webapp/site/css/markup.css
+++ b/src/main/webapp/site/css/markup.css
@@ -75,6 +75,7 @@ body{
 }
 .header{
     position: fixed;
+    z-index: 10;
     width: 100%;
     height: 50px;
     -ms-align-items: center;
@@ -99,6 +100,7 @@ body{
     margin: 0 10%;
 }
 .template-container{
+    position: relative;
     background: #fff;
     border: 1px solid rgba(160,160,160, 0.3);
     margin: 10px;
@@ -107,6 +109,7 @@ body{
     align-items: center;
     justify-content: center;
     padding: 1%;
+    transition: all 0.3s ease-in;
 }
 .content p{
     margin: 10px;
@@ -178,4 +181,13 @@ body{
 }
 .template-info-container{
     margin: 5%;
+}
+.delete-button{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.delete-button-icon{
+    width: 25px;
+    height: auto;
 }
