space creation done with html

--- a/site/css/markup.css
+++ b/site/css/markup.css
@@ -88,8 +88,8 @@ flex-grow: 1;
 	text-align: center;
 }
 .content{
-	-ms-align-items: center;
-	align-items: center;
+	-ms-align-items: flex-start;
+	align-items: flex-start;	
 	justify-content: space-around;
 	-webkit-flex-wrap: wrap;
 	-moz-flex-wrap: wrap;
@@ -240,4 +240,32 @@ flex-grow: 1;
 	-ms-align-items: center;
 	align-items: center;
 	justify-content: space-around;
+}
+
+
+.spaces-block, .rooms-block{
+	width: 40%;
+}
+.space-container{
+	background: #fff;
+	border: 1px solid rgba(160,160,160, 0.3);
+	margin: 10px;
+	/*flex-basis: 150px;*/
+	-ms-align-items: center;
+	align-items: center;
+	justify-content: space-between;
+	padding: 1%;
+}
+.new-space-button-container{
+	-ms-align-items: center;
+	align-items: center;
+	justify-content: center;
+}
+
+
+
+
+.delete-button-icon{
+    width: 25px;
+    height: auto;
 }
